--- a/react-app/package.json
+++ b/react-app/package.json
@@ -35,6 +35,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://127.0.0.1:5000",
   "devDependencies": {
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
